# web-scraper-pro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: scheduled_scrape.yml
examples/: README.md  scrape_listings.sh
src/web_scraper/: __init__.py  cli.py  config.py  exporter.py  fetcher.py  parser.py  scheduler.py
tests/: conftest.py  test_exporter.py  test_fetcher.py  test_parser.py
tests/fixtures/: sample_html.html
